added content to TMP case study

--- a/case-studies/tmp-for-christchurch/index.html
+++ b/case-studies/tmp-for-christchurch/index.html
@@ -34,39 +34,52 @@ casestudyid: 5
 
     <div class="max-1000 align-left space-below-please">
       <h2 class="lowercase">The Problem</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>The first specification for TMP for CHCH was crafted in 2011 by Robyn Gardner (then) of Christchurch City Council - literally on a napkin while on a flight from Auckland to Christchurch.</p>
+      <p>Robyn’s team was facing a tenfold increase in the number of Traffic Management Plans that were being submitted in a city that ran a very real risk of complete gridlock.</p>
+      <p>The Traditional paper-based system was unable to cope with the influx of plans and the new problems that an unprecedented number of roadworks created.</p>
+      <p class="space-below-please">A contract to develop the system was formed between Media Suite, CCC and NZTA and who all had an interest in streamlining the TMP submission process.</p>
 
       <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
       <h2 class="lowercase">The Solution</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-      <h2 class="lowercase">Functionality</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Within 7 days of the famous napkin sketch, The Media Suite returned the first visual mock-ups of the system, just a few days before Christmas 2011.</p>
+      <p>Christmas was cut short for our development team who set to work getting the first prototype ready for end of January 2012. After a suite of additional features was added, version one of the system officially launched in March 2012, with contractors gradually phased onto the system over a two-month period.</p>
+      <p class="space-below-please">In its first two years of operation, TMP for Christchurch has processed over 14,000 Traffic Management Plans and a further 13,000 revisions to those plans. The system has expanded to become the key tool for coordinating roadworks and traveller information within the Christchurch area. Other Road Controling Authorities are now looking to adopt the system in their regions.</p>
 
       <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 all-the-space-below" />
 
+      <h2 class="lowercase">Functionality</h2>
+      <p>The system allows STMS’s &amp; roading contractors to submit Traffic Management Plans electronically to Christchurch City Council and NZTA for review and acceptance.</p>
+      <p>During the submission process, Contractors enter the detail of their project, including plotting worksite locations on a map - and the anticipated traffic impacts of their worksites.</p>
+      <p>Approval and Acceptance is a two step process with Engineers first needing to sign off on the proposed plan. Once an engineer has approved the plan it is passed to Traffic Management Controllers (TMC’s) who look at the wider impact of the works and how they relate to localised traffic disruption, safety and scheduling before they accept the plan.</p>
+      <p>The system has built in warning systems which flag potential conflicts and allow TMC’s to communicate these to the Contractors.</p>
+      <p>Each step is automated with accepted plans finally being passed electronically back to the STMS in charge of the worksite.</p>
+      <p class="space-below-please">The road controlling authorities have an overview of all the roadworks across the city, which acts as a planning and informing tool.</p>
+
       <h2 class="lowercase">Core Features</h2>
       <p class="space-below-please">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Electronic Submission of Traffic Management Plans<br/>
+        Ability for STMS’s to see conflicts before they submit their plans<br/>
+        Streamlined Approval and Acceptance Process<br/>
+        Ability for Multiple RCA’s to coordinate the same plan (such as a worksite that impacts both a highway and local road)<br/>
+        Ability for STMS’s to submit revisions to plans.<br/>
+        Advanced Searching<br/>
+        Automated notifications to 3rd parties such as bus operators, parking operations, signals teams, emergency services and radio stations.<br/>
+        API which supplies data to NZTA’s Info Connect, AA and other 3rd party systems.<br/>
+        KPI Reporting<br/>
+        Real-time Incident Management<br/>
+        Traveller Information available via a public website.<br/>
       </p>
 
       <h2 class="lowercase">Efficiency Gains</h2>
-      <p class="space-below-please">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Providing an interface for Contractors to see other works in the area before submitting traffic management plans is better for everyone. Previously Contractors had no way to tell if other conflicting works were being planned in the same area. Contractors can now adjust schedules before submitting a plan.</p>
+      <p>Only completed plans are accepted by the system, slimming administration time in chasing up missing documents and details.</p>
+      <p class="space-below-please">All communication for a plan is logged in one place, which allows better crossover within a team of Traffic Managers.</p>
 
       <h2 class="lowercase">Safety Gains</h2>
-      <p class="all-the-space-below">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Emergency services have access to the data so that callouts can be re-routed around worksites where required.</p>
+      <p>High impact sites are published to the public so road users can make informed driving decisions before setting out on a journey.</p>
+      <p class="all-the-space-below">If you have any questions about this project please contact George Wills on 021 606462.</p>
     </div>
 
     {% include other-case-studies.html %}
