added content for appraisal connector case study

--- a/case-studies/appraisal-connector/index.html
+++ b/case-studies/appraisal-connector/index.html
@@ -8,7 +8,7 @@ casestudyid: 4
   <div class="max-1200 align-center clearfix">
     <h1 class="lowercase underline-orange">Case Study: Appraisal Connector</h1>
     <div class="case-study-intro max-1000">
-      <p>George - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p>Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - its online appraisal system designed to enhance the professional learning of New Zealand teachers.</p>
     </div>
 
     <div class="case-study-icons">
@@ -25,46 +25,27 @@ casestudyid: 4
       </div>
     </div>
 
-    <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100" />
-    <div class="image-caption max-1000">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-    </div>
+    <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
       <h2 class="lowercase">The Problem</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>After years of educational research and following guidelines established by the New Zealand Ministry of Education, InterLEAD consultants developed the philosophy and ideas behind the Appraisal Connector&trade;.</p>
+      <p class="space-below-please">Media Suite were able to capture that philosophy and develop an intuitive web interface that streamlines the review process, allowing teachers and schools to focus on continued professional development.</p>
 
       <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
-      <h2 class="lowercase">The Solution</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-      <h2 class="lowercase">Functionality</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 all-the-space-below" />
-
       <h2 class="lowercase">Core Features</h2>
       <p class="space-below-please">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Appraisal Scheduling<br/>
+        Professional Journals &amp; Goal Setting<br/>
+        A Student Feedback Portal<br/>
+        Individual Reporting<br/>
+        School Wide Reporting
       </p>
 
-      <h2 class="lowercase">Efficiency Gains</h2>
-      <p class="space-below-please">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <h2 class="lowercase">Safety Gains</h2>
-      <p class="all-the-space-below">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>The initial ‘bootstrap’ system was built very rapidly over a couple of months and used to cost effectively test the market. Features and users were rapidly added over the first year of operation. Now after three years of continuous development (including a near complete rebuild) Appraisal Connector™ offers a compelling set of features.</p>
+      <p>In 2014 we have added a new companion product called Leadership Reflector&trade; - focusing on the feedback of leaders.</p>
+      <p>If you have any questions about this project please contact George Wills on 021 606462.</p>
     </div>
 
     {% include other-case-studies.html %}
