added real photos

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -39,7 +39,7 @@ menuorder: 4
                   <h2 class="bio-heading">Abigail Little</h2>
                   <h3 class="bio-sub">Everything</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Abi Little" />
+                    <img src="{{ "/img/people/real-abi.jpg" | prepend: site.baseurl }}" alt="Abi Little" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -70,7 +70,7 @@ menuorder: 4
                   <h2 class="bio-heading">Andrew Pitts</h2>
                   <h3 class="bio-sub">Creative Director</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Andrew Pitts" />
+                    <img src="{{ "/img/people/real-andrew.jpg" | prepend: site.baseurl }}" alt="Andrew Pitts" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -101,7 +101,7 @@ menuorder: 4
                   <h2 class="bio-heading">Ed Robinson</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Ed Robinson" />
+                    <img src="{{ "/img/people/real-ed.jpg" | prepend: site.baseurl }}" alt="Ed Robinson" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -132,7 +132,7 @@ menuorder: 4
                   <h2 class="bio-heading">Ersin Buckley</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Ersin Buckley" />
+                    <img src="{{ "/img/people/real-ersin.jpg" | prepend: site.baseurl }}" alt="Ersin Buckley" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -194,7 +194,7 @@ menuorder: 4
                   <h2 class="bio-heading">Jonathan Prince</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Jonathan Prince" />
+                    <img src="{{ "/img/people/real-jonathan.jpg" | prepend: site.baseurl }}" alt="Jonathan Prince" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -256,7 +256,7 @@ menuorder: 4
                   <h2 class="bio-heading">Julia Hide</h2>
                   <h3 class="bio-sub">Front-end Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Julia Hide" />
+                    <img src="{{ "/img/people/real-julia-temp-lololol.jpg" | prepend: site.baseurl }}" alt="Julia Hide" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -287,7 +287,7 @@ menuorder: 4
                   <h2 class="bio-heading">Lewis Christie</h2>
                   <h3 class="bio-sub">Roaming Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Lewis Christie" />
+                    <img src="{{ "/img/people/real-lewis.jpg" | prepend: site.baseurl }}" alt="Lewis Christie" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -318,7 +318,7 @@ menuorder: 4
                   <h2 class="bio-heading">Mark Stuart</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Mark Stuart" />
+                    <img src="{{ "/img/people/real-mark.jpg" | prepend: site.baseurl }}" alt="Mark Stuart" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -349,7 +349,7 @@ menuorder: 4
                   <h2 class="bio-heading">Matt (in-a-hat) Lang</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Matt Lang" />
+                    <img src="{{ "/img/people/real-matt.jpg" | prepend: site.baseurl }}" alt="Matt Lang" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -380,7 +380,7 @@ menuorder: 4
                   <h2 class="bio-heading">Patrick Walsh</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Patrick Walsh" />
+                    <img src="{{ "/img/people/real-jesus.jpg" | prepend: site.baseurl }}" alt="Patrick Walsh" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -411,7 +411,7 @@ menuorder: 4
                   <h2 class="bio-heading">Pete Banks</h2>
                   <h3 class="bio-sub">Project Manager</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Pete Banks" />
+                    <img src="{{ "/img/people/real-pete.jpg" | prepend: site.baseurl }}" alt="Pete Banks" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -442,7 +442,7 @@ menuorder: 4
                   <h2 class="bio-heading">Richard Walker (aka Richie)</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Richie Walker" />
+                    <img src="{{ "/img/people/real-richie.jpg" | prepend: site.baseurl }}" alt="Richie Walker" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -473,7 +473,7 @@ menuorder: 4
                   <h2 class="bio-heading">Sarah Pitts</h2>
                   <h3 class="bio-sub">Illustrator</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Sarah Pitts" />
+                    <img src="{{ "/img/people/real-sarah.jpg" | prepend: site.baseurl }}" alt="Sarah Pitts" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -504,7 +504,7 @@ menuorder: 4
                   <h2 class="bio-heading">Steve Liew</h2>
                   <h3 class="bio-sub">Developer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Steve Liew" />
+                    <img src="{{ "/img/people/real-steve.jpg" | prepend: site.baseurl }}" alt="Steve Liew" />
                   </div>
                 </div>
                 <div class="bio-body">
@@ -535,7 +535,7 @@ menuorder: 4
                   <h2 class="bio-heading">Terri Winder</h2>
                   <h3 class="bio-sub">Security Officer</h3>
                   <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-george.jpg" | prepend: site.baseurl }}" alt="Terri Winder" />
+                    <img src="{{ "/img/people/real-terri.jpg" | prepend: site.baseurl }}" alt="Terri Winder" />
                   </div>
                 </div>
                 <div class="bio-body">
