Added new mattie! + tail wag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@ menuorder: 1
       </div> <!-- .faux-table -->
     </div> <!-- .banner-text-wrap -->
     <div class="naaw-its-mattie">
-      <a href="#work-panel" class="js-next-panel mattie-link"><img src="{{ "/img/mattie.png" | prepend: site.baseurl }}" alt="" /></a>
+      <a href="#work-panel" class="js-next-panel mattie-link">
+        <img src="{{ "/img/mattie.png" | prepend: site.baseurl }}" width="255" height="162" alt="" />
+        <div class="tail-tip"><img class="tip-wag" src="{{ "/img/tail-tip.png" | prepend: site.baseurl }}" width="38" height="46" alt="" /></div>
+        <div class="woof-woof">woof, down here!</div>
+      </a>
     </div> <!-- .naaw-its-mattie -->
   </section>
 
