--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -28,7 +28,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/abi.png" | prepend: site.baseurl }}" alt="Abi Little" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -59,7 +59,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/andrew.png" | prepend: site.baseurl }}" alt="Andrew Pitts" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -90,7 +90,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/ed.png" | prepend: site.baseurl }}" alt="Ed Robinson" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -121,7 +121,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/ersin.png" | prepend: site.baseurl }}" alt="Ersin Buckley" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -152,7 +152,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/george.png" | prepend: site.baseurl }}" alt="George Wills" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -183,7 +183,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/jonathan.png" | prepend: site.baseurl }}" alt="Jonathan Prince" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -214,7 +214,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/no-image-ill.png" | prepend: site.baseurl }}" alt="Joshua Vial" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -245,7 +245,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/julia.png" | prepend: site.baseurl }}" alt="Julia Hide" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -276,7 +276,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/lewis.png" | prepend: site.baseurl }}" alt="Lewis Christie" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -307,7 +307,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/mark.png" | prepend: site.baseurl }}" alt="Mark Stufart" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -338,7 +338,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/matt.png" | prepend: site.baseurl }}" alt="Matt Lang" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -369,7 +369,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/patrick.png" | prepend: site.baseurl }}" alt="Patrick Walsh" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -400,7 +400,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/pete.png" | prepend: site.baseurl }}" alt="Pete Banks" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -431,7 +431,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/richie.png" | prepend: site.baseurl }}" alt="Richie Walker" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -462,7 +462,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/sarah.png" | prepend: site.baseurl }}" alt="Sarah Pitts" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -493,7 +493,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/steve.png" | prepend: site.baseurl }}" alt="Steve Liew" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -524,7 +524,7 @@ menuorder: 4
           <img class="person-image" src="{{ "/img/people/terri.png" | prepend: site.baseurl }}" alt="Terri Winder" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
-            <img class="burst rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
