--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@ menuorder: 1
           <h2 class="lowercase underline-orange">Cost and Value</h2>
           <div class="cols-wrap">
             <div class="col col-half middle text-size-24">
-              <p>Our clients are diverse, but we're generally the best fit for large, complex projects that have the potential to create a lot of value. Typical projects run from a few months to a year or more, with budgets from $50k to over $1 million.</p>
+              <p>Our clients are diverse, but we're generally the best fit for large, complex projects that have the potential to create a lot of value.</p> 
+              <p>Typical projects run from a few months to a year or more, with budgets from $50k to over $1 million.</p>
               <p>Custom software development is a big investment. We'll help you mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
             </div>
             <div class="col col-half middle">
               <div class="value-wheel-wrap levitate">
                 <!-- <img class="value-wheel rotate" src="{{ "/img/value-wheel.jpg" | prepend: site.baseurl }}" alt="" /> -->
                 {% include value-wheel.html %}
+                <div class="typical-budgets">typical budgets</div>
               </div> <!-- .value-wheel-wrap -->
               <div>
                 <img src="{{ "/img/wheel-shadow.png" | prepend: site.baseurl }}" width="425" class="wheel-shadow">
