--- a/index.html
+++ b/index.html
@@ -54,7 +54,38 @@ menuorder: 1
     </div> <!-- .naaw-its-mattie -->
   </section>
 
-  <section id="work-panel" class="content-panel">
+   <section id="clients-panel" class="content-panel">
+    <div class="panel-inner max-1200 clearfix js-fade-in-up">
+      <div class="faux-table">
+        <div class="faux-table-cell">
+
+          <h2 class="lowercase underline-orange">Build the right thing</h2>
+          <p class="text-size-24">We combine <span class="emphasis">thoughtful design</span> with <span class="emphasis">clever technology</span> to help build successful Software, Websites &amp; Apps for a range of private businesses &amp; progressive organisations.</p>
+
+          <ul class="logo-grid">
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/1-nzta.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/2-ccc.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/3-linz.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/4-wine-marlborough.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/5-mdc.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/6-greater-wellington.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/7-interlead.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/8-addington.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill square-logo"><img src="{{ "/img/client-logos/9-acc.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/10-mrc.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/11-chl.png" | prepend: site.baseurl }}" alt="" /></a></li>
+            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill square-logo"><img src="{{ "/img/client-logos/12-discover-travel.png" | prepend: site.baseurl }}" alt="" /></a></li>
+          </ul>
+
+          <a href="#" class="drop-btn orange-bg">View our portfolio</a>
+
+        </div> <!-- .faux-table-cell -->
+      </div> <!-- .faux-table -->
+    </div>
+  </section>
+
+
+   <section id="work-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="faux-table">
         <div class="faux-table-cell">
@@ -80,35 +111,6 @@ menuorder: 1
     </div> <!-- .panel-inner -->
   </section>
 
-  <section id="clients-panel" class="content-panel">
-    <div class="panel-inner max-1200 clearfix js-fade-in-up">
-      <div class="faux-table">
-        <div class="faux-table-cell">
-
-          <h2 class="lowercase underline-orange">Recent Clients</h2>
-          <p class="text-size-24">We work with a range of private businesses &amp; progressive organisations.</p>
-
-          <ul class="logo-grid">
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/1-nzta.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/2-ccc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/3-linz.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/4-wine-marlborough.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/5-mdc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/6-greater-wellington.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/7-interlead.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/8-addington.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill square-logo"><img src="{{ "/img/client-logos/9-acc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/10-mrc.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill"><img src="{{ "/img/client-logos/11-chl.png" | prepend: site.baseurl }}" alt="" /></a></li>
-            <li class="grid-item"><a href="#" class="grid-item-link js-image-fill square-logo"><img src="{{ "/img/client-logos/12-discover-travel.png" | prepend: site.baseurl }}" alt="" /></a></li>
-          </ul>
-
-          <a href="#" class="drop-btn orange-bg">View our portfolio</a>
-
-        </div> <!-- .faux-table-cell -->
-      </div> <!-- .faux-table -->
-    </div>
-  </section>
 
   <section id="value-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
