--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: default
 title: Media Suite | Thoughtful Design, Clever Technology
 menutitle: Home
 menuorder: 1
+ishome: true
 ---
-<div id="main-wrap" class="home-page js-one-page-scroll onepage-wrapper">
+<div id="main-wrap" class="home-page">
 
   <section id="banner-panel">
     <div id="home-panel-nav">
@@ -48,8 +49,8 @@ menuorder: 1
     <div class="naaw-its-mattie">
       <a href="#work-panel" class="js-next-panel mattie-link">
         <img src="{{ "/img/mattie.png" | prepend: site.baseurl }}" width="255" height="162" alt="" />
-        <div class="tail-tip"><img class="tip-wag" src="{{ "/img/tail-tip.png" | prepend: site.baseurl }}" width="38" height="46" alt="" /></div>
-        <div class="woof-woof">woof, down here!</div>
+        <span class="tail-tip"><img class="tip-wag" src="{{ "/img/tail-tip.png" | prepend: site.baseurl }}" width="38" height="46" alt="" /></span>
+        <span class="woof-woof">woof, down here!</span>
       </a>
     </div> <!-- .naaw-its-mattie -->
   </section>
@@ -119,7 +120,7 @@ menuorder: 1
           <h2 class="lowercase underline-orange">Cost and Value</h2>
           <div class="cols-wrap">
             <div class="col col-half middle text-size-24">
-              <p>Our clients are diverse, but we're generally the best fit for large, complex projects that have the potential to create a lot of value.</p> 
+              <p>Our clients are diverse, but we're generally the best fit for large, complex projects that have the potential to create a lot of value.</p>
               <p>Typical projects run from a few months to a year or more, with budgets from $50k to over $1 million.</p>
               <p>Custom software development is a big investment. We'll help you mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
             </div>
