fixed svg sizing

--- a/index.html
+++ b/index.html
@@ -126,13 +126,10 @@ ishome: true
             </div>
             <div class="col col-half middle">
               <div class="value-wheel-wrap levitate">
-                <!-- <img class="value-wheel rotate" src="{{ "/img/value-wheel.jpg" | prepend: site.baseurl }}" alt="" /> -->
                 {% include value-wheel.html %}
-                <div class="typical-budgets">typical budgets</div>
+                <div class="value-wheel-middle fancy-pants-font lowercase">Typical Budgets</div>
               </div> <!-- .value-wheel-wrap -->
-              <div>
-                <img src="{{ "/img/wheel-shadow.png" | prepend: site.baseurl }}" width="425" class="wheel-shadow">
-              </div>
+              <img src="{{ "/img/wheel-shadow.png" | prepend: site.baseurl }}" alt="" class="wheel-shadow">
             </div> <!-- .col -->
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
