Updated case study content

--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Media Suite | Who we are
-menutitle: Who we are
+menutitle: People
 menuorder: 4
 ---
 <div id="main-wrap" class="internal-page people-page">
