--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -11,7 +11,7 @@ menuorder: 2
 
     <div class="case-study-items">
 
-      <div id="csi-cruisy" class="case-study-item clearfix">
+      <!-- <div id="csi-cruisy" class="case-study-item clearfix">
         <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-marlborough-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
@@ -28,10 +28,10 @@ menuorder: 2
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
           </div>
-        </div> <!-- .item-text -->
-      </div> <!-- .case-study-item -->
+        </div>  .item-text 
+      </div> .case-study-item -->
 
-      <div id="csi-tfc" class="case-study-item clearfix">
+      <!-- <div id="csi-tfc" class="case-study-item clearfix">
         <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
@@ -48,8 +48,8 @@ menuorder: 2
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
           </div>
-        </div> <!-- .item-text -->
-      </div> <!-- .case-study-item -->
+        </div> .item-text
+      </div>  .case-study-item --> 
 
       <div id="csi-forward-works" class="case-study-item clearfix">
         <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-image">
@@ -65,7 +65,7 @@ menuorder: 2
               <i class="icon icon-desktop"></i>
             </div>
             <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.</p>
-            <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+            <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
@@ -83,8 +83,8 @@ menuorder: 2
             <div class="item-icons">
               <i class="icon icon-desktop"></i>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+            <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
+            <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
@@ -102,13 +102,13 @@ menuorder: 2
             <div class="item-icons">
               <i class="icon icon-desktop"></i>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
+            <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
+            <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
 
-      <div id="csi-llur" class="case-study-item clearfix">
+      <!-- <div id="csi-llur" class="case-study-item clearfix">
         <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-listed-land-use-register.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
@@ -124,8 +124,8 @@ menuorder: 2
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a href="{{ "/case-studies/listed-land-use-register" | prepend: site.baseurl }}" class="item-link lowercase">More on this&hellip;</a>
           </div>
-        </div> <!-- .item-text -->
-      </div> <!-- .case-study-item -->
+        </div>  .item-text 
+      </div> .case-study-item -->
 
     </div> <!-- .case-study-items -->
 
